[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["Sebastian Monzon <smonzon360@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.24"
feedparser = "^6.0.11"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-embeddings-instructor = "^0.1.3"
ipython = "^8.22.1"
ollama = "^0.1.6"
llama-index-llms-ollama = "^0.1.2"
llama-index-llms-replicate = "^0.1.3"
llama-index-core = "^0.10.14"
llama-index = "^0.10.14"
llama-index-llms-llama-cpp = "^0.1.3"
replicate = "^0.24.0"
pyttsx3 = "^2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
